--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Java Basic Webpage</title>
-  <link rel="stylesheet" href="jsCss.css">
+    <title>Java Basic Webpage</title>
+    <link rel="stylesheet" href="jsCss.css">
 </head>
+
 <body>
+    <a href="../index.html" style="display: block; margin: 20px;">Home</a>
     <button>Click me</button>
-    <p>Button changes red to blue and blue to red using a HTML, CSS and Javascript file.</p>
+    <p>Button changes red to blue to green to yellow using a HTML, CSS and Javascript file.</p>
     <div id="changeMe">
         <p class="p">Created by Rob Dunn</p>
     </div>
 
 
 
-  
-  <footer>
-   <p></p>Credit to <em>Topknot Clare</em> on <strong>YouTube. </strong><a href="https://youtu.be/xwKbtUP87Dk" target="_blank">Link to YouTube video.</a>
-  </footer>
-  <script src="Javabasics.js"></script>
+
+    <footer>
+        <p></p>Credit to <em>Topknot Clare</em> on <strong>YouTube. </strong><a href="https://youtu.be/xwKbtUP87Dk"
+            target="_blank">Link to YouTube video.</a>
+    </footer>
+    <script src="Javabasics.js"></script>
 </body>
+
 </html>
